--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@kolkov/ngx-gallery": "^1.2.3",
+    "@microsoft/signalr": "^6.0.1",
     "bootstrap": "^4.5.3",
     "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^7.1.0",
     "ngx-spinner": "^12.0.0",
+    "ngx-timeago": "^2.0.0",
     "ngx-toaster": "^1.0.1",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
